# adversarial-fraud-detection-llm

./: .gitignore  README.md  pyproject.toml  requirements-llama.txt  requirements.txt
scripts/: evaluate.py  generate_figures.py  generate_tables.py  preprocess.py  run_ablation.py  run_baselines.py  run_hyperparam.py  run_industry.py  run_trajectory_sweep.py  train.py
src/: __init__.py
src/adftd/: __init__.py  config.py
src/adftd/data/: __init__.py  aaer_matcher.py  dataset.py  edgar_loader.py  peer_group.py
src/adftd/evaluation/: __init__.py  metrics.py
src/adftd/features/: __init__.py  embedders.py  fraud_w2v.py  trajectory.py
src/adftd/models/: __init__.py  adftd.py  baselines.py  counterfactual.py  detector.py  tcn.py
src/adftd/training/: __init__.py  fgsm.py  losses.py  trainer.py
